Update server.sh